# listwrap

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  listwrap.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  listwrap.doctree  modules.doctree
.github/workflows/: ci.yml  deploy-docs.yml
_sources/: listwrap.rst.txt  modules.rst.txt
docs/: conf.py  index.rst
listwrap/: __init__.py
tests/: test_align.py
